--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,49 @@
+absl-py==1.0.0
 appnope==0.1.2
+astor==0.8.1
 asttokens==2.0.5
 backcall==0.2.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.3
 cycler==0.11.0
+debugpy==1.5.1
 decorator==5.1.1
+editdistance==0.6.0
+efficientnet==1.0.0
+entrypoints==0.4
+essential-generators==1.0
 executing==0.8.3
+filelock==3.6.0
 fonttools==4.29.1
+gast==0.5.3
+grpcio==1.44.0
+h5py==3.6.0
+huggingface-hub==0.5.1
+idna==3.3
+imageio==2.16.1
+imgaug==0.4.0
+importlib-metadata==4.11.3
+imutils==0.5.4
+ipykernel==6.9.2
 ipython==8.1.1
 jedi==0.18.1
+joblib==1.1.0
+jupyter-client==7.1.2
+jupyter-core==4.9.2
+keras==2.8.0
+Keras-Applications==1.0.8
+keras-ocr==0.8.9
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
+Markdown==3.3.6
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
+nest-asyncio==1.5.4
+networkx==2.7.1
+nltk==3.7
 numpy==1.22.2
+opencv-python==4.5.5.62
 packaging==21.3
 pandas==1.4.1
 parso==0.8.3
@@ -18,21 +51,53 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.0.1
 prompt-toolkit==3.0.28
+protobuf==3.19.4
+psutil==5.9.0
+psycopg==3.0.9
+psycopg2==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
+pyclipper==1.3.0.post2
 pygame==2.1.2
 Pygments==2.11.2
 pyparsing==3.0.7
+pytesseract==0.3.9
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2021.3
+PyWavelets==1.2.0
+PyX==0.15
+PyYAML==6.0
+pyzmq==22.3.0
+regex==2022.4.24
+requests==2.27.1
+sacremoses==0.0.53
+scikit-image==0.19.2
+scikit-learn==1.0.2
 scipy==1.8.0
 seaborn==0.11.2
+sentence-transformers==2.2.0
+sentencepiece==0.1.96
+Shapely==1.8.1.post1
 six==1.16.0
 stack-data==0.2.0
+tensorboard==1.12.2
+termcolor==1.1.0
+threadpoolctl==3.1.0
+tifffile==2022.2.9
 tk==0.1.0
+tokenizers==0.12.1
 torch==1.10.2
 torch-utils==0.1.2
 torchvision==0.11.3
+tornado==6.1
+tqdm==4.63.0
 traitlets==5.1.1
+transformers==4.18.0
 typing_extensions==4.1.1
+urllib3==1.26.9
+validators==0.18.2
 wcwidth==0.2.5
+Werkzeug==2.0.3
+zipp==3.7.0
